--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 id="title1">Hello World</h1>
+</hr>
+<p id="p1">Welcome to My Blog</p>
 </body>
 </html>
