--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 id="title1">Hello World</h1>
+<link rel="stylesheet" type="text/css" href="1.css">
+<h1 id="title1">Work blog.</h1>
+<h2 id="title2">Nicolas Kang</h2>
 </hr>
-<p id="p1">Welcome to My Blog</p>
+<p id="p1">Welcome to My Work Blog. I will share my working experience and some research outcomes with you all</p>
 </body>
 </html>
