--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 <link rel="stylesheet" type="text/css" href="1.css">
-<h1 id="title1">Work blog.</h1>
+<h1 id="title1">工作日志</h1>
 <h2 id="title2">Nicolas Kang</h2>
 </hr>
-<p id="p1">Welcome to My Work Blog. I will share my working experience and some research outcomes with you all</p>
+<p id="p1">欢迎来到我的工作日志，我在这里会介绍一些我的相关研究。</p>
+<p id="p2">我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的相关任务是信息矫正，还有从交通数据中挖掘堵车信息。</p>
 </body>
 </html>
