--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <h2 id="title2">Nicolas Kang</h2>
 </hr>
 <p id="p1">欢迎来到我的工作日志，我在这里会介绍一些我的相关研究。</p>
-<p id="p1">我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的相关任务是信息矫正，还有从交通数据中挖掘堵车信息。</p>
+<p id="p1">我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的任务是信息矫正，还有从交通数据中挖掘堵车信息。这次研究的目的是希望从南京出租车的移动信息中首先了解南京交通的基本情况，出租车的移动情况。同时进一步能够得出发生这些情况的具体原因和一些具体的性质。针对原因和性质能够找出相关的解决方案。</p>
 </body>
 </html>
