--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <body>
 <link rel="stylesheet" type="text/css" href="1.css">
-<h1 id="title1">工作日志</h1>
-<h2 id="title2">Nicolas Kang</h2>
+<h1 id="title1">工作日志 By Nicolas Kang</h1>
 </hr>
+<h2 id="title2">相关背景和介绍</h2>
 <p id="p1">欢迎来到我的工作日志，我在这里会介绍一些我的相关研究。</p>
-<p id="p1">我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的任务是信息矫正，还有从交通数据中挖掘堵车信息。这次研究的目的是希望从南京出租车的移动信息中首先了解南京交通的基本情况，出租车的移动情况。同时进一步能够得出发生这些情况的具体原因和一些具体的性质。针对原因和性质能够找出相关的解决方案。</p>
+<p id="p1">我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的任务是信息矫正，还有从交通数据中挖掘堵车信息。这次研究的目的是希望从南京出租车的移动信息中首先了解南京交通的基本情况，出租车的移动情况。同时进一步能够得出发生这些情况的具体原因和一些具体的性质。针对原因和性质能够找出相关的解决方案。第二次的研究经历是关于Human Mobility的宏观及微观研究，我的任务是第一，基于上海市蜂窝大数据，对移动性研究的高引论文及开拓论文“Understanding human individual mobility patterns"进行相关验证。第二，对蜂窝网络大数据下的人类移动提出相关的模型，将模型运用到数据的挖掘中。</p>
+</hr>
+<h3 id="title3">详细任务描述</h3>>
 </body>
 </html>
