--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3 id="title3">详细任务描述</h3>
 <p id="p1">>我是如何进行信息矫正的？</p>
 <p id="p1">>首先信息矫正，具体来说是将GPS的数据矫正到道路上。车载网络的GPS数据不一定是完全正确无误的，GPS完全有可能不在道路上。但对于车辆来说，GPS坐标是一定要在道路上的。为了确保数据的一致性和结论的力度，将数据进行矫正是完全有必要的。</p>
-<img id="photo1" src="describe1.gif" alt="Failed">
-<img id="photo2" src="describe1.gif" alt="Failed">
+<img id="photo1" src="describe1.gif" alt="Picture Failed">
+<img id="photo2" src="describe1.gif" alt="Picture Failed">
 </body>
 </html>
