--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <img src="describe1.png" width= 40% alt="Picture Failed">
 <img src="describe2.png" width= 40% alt="Picture Failed">
 </div>
-<p>>我是如何挖掘相关信息的？</p>
+<p>>我是如何挖掘堵车信息的？</p>
 <p>></p>
 </div>
-<div id="footer">All right reserved3</div>
+<div id="footer">All right reserved1</div>
 </div>
 </body>
 </html>
