--- a/index.html
+++ b/index.html
@@ -7,29 +7,17 @@
 <h1>工作日志 By Nicolas Kang</h1>
 </div>
 <div id="menu">
-<h2>相关背景和介绍</h2>
+<h2>研究介绍</h2>
+<h3>>城市计算与车载网络</h3>
+<h3>>人类移动性</h3>
 </div>
 
 <div id="content">
-<p>>欢迎来到我的工作日志，我在这里会介绍一些我的相关研究经历。</p>
+<h3>>研究经历</h3>
 <p>>我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的任务，第一是信息矫正及补充，第二是从交通数据中提取堵车信息。这次研究的目的是希望从南京出租车的移动信息中首先了解南京交通的基本情况，出租车的移动情况。第二次的研究经历是关于Human Mobility的宏观及微观研究，我的任务是第一，基于上海市蜂窝大数据，对移动性研究的高引论文及开拓论文“Understanding human individual mobility patterns"进行相关验证。第二，对蜂窝网络大数据下的人类移动提出相关的模型，将模型运用到数据的挖掘中。</p>
-<h3>城市计算以及车载网络</h3>
-<p>>我是如何进行信息矫正的？</p>
-<p>>首先针对信息矫正，具体来说是将GPS的数据矫正到道路上。车载网络的GPS数据不一定是完全正确无误的，GPS完全有可能不在道路上。但对于车辆来说，GPS坐标是一定要在道路上的。为了确保数据的一致性和结论的力度，将数据进行矫正是完全有必要的。关于信息的补充，具体目的是为了研究的方便，我们需要一个统一的时间轴来进行研究。因此我的任务是根据已有点进行统一的时间点补充。以下是示意图</p>
-<div id="photo">
-<img src="describe1.png" width= 40% alt="Picture Failed">
-<img src="describe2.png" width= 40% alt="Picture Failed">
-</div>
-<p>>根据时间间隔Δt，将所需要的时间点取出，再根据现有的点来计算所有需要的GPS坐标，之后将GPS坐标根据地图来纠正到路上。</p>
-</hr>
-<p>>我是如何提取堵车信息的？</p>
-<p>>堵车的条件是：1.对于个体而言，车辆会低速缓慢地移动。 2.对于群体而言，车辆会大量聚集在一个地方。因此提取的步骤分为了个人分析及群体分析。需要注意的是，两个步骤缺一不可，低速行驶是必要的条件，但不能充分的说明该车处于堵车的状态。</p>
-<p>>方法：1.提取每个车辆低速行驶的时间和地点。2.将所有数据进行归纳，找出大量车辆聚集的时间和地点。</p>
-
-
-
-
-
+<h3>>背景</h3>
+<p>>移动大数据越来越多的被应用在交通规划，城市规划当中。该数据的特点体现在产生途经广，分析方法多样，研究价值高。</p>
+<img src="p1.png" width= 40% alt="Picture Failed">
 
 </div>
 <div id="footer">All right reserved1</div>
