--- a/sub1.html
+++ b/sub1.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+<link rel="stylesheet" type="text/css" href="1.css">
+<div id="container">
+<div id="header">
+<h1>工作日志 By Nicolas Kang</h1>
+</div>
+<div id="content">
 <h3>城市计算以及车载网络</h3>
 <p>>如何进行信息矫正的？</p>
 <p>>首先针对信息矫正，具体来说是将GPS的数据矫正到道路上。车载网络的GPS数据不一定是完全正确无误的，GPS完全有可能不在道路上。但对于车辆来说，GPS坐标是一定要在道路上的。为了确保数据的一致性和结论的力度，将数据进行矫正是完全有必要的。关于信息的补充，具体目的是为了研究的方便，我们需要一个统一的时间轴来进行研究。因此我的任务是根据已有点进行统一的时间点补充。以下是示意图</p>
@@ -10,4 +19,12 @@
 <p>>如何提取堵车信息的？</p>
 <p>>堵车的条件是：1.对于个体而言，车辆会低速缓慢地移动。 2.对于群体而言，车辆会大量聚集在一个地方。因此提取的步骤分为了个人分析及群体分析。需要注意的是，两个步骤缺一不可，低速行驶是必要的条件，但不能充分的说明该车处于堵车的状态。</p>
 <p>>方法：1.提取每个车辆低速行驶的时间和地点。2.将所有数据进行归纳，找出大量车辆聚集的时间和地点。</p>
-<p>>
+
+
+</div>
+<div id="footer">All right reserved1</div>
+</div>
+</body>
+</html>
+
+
