--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </div>
 <div id="menu">
 <h2>研究介绍</h2>
-<h3>>城市计算与车载网络</h3>
-<h3>>人类移动性</h3>
+<a href="sub1.html">>城市计算与车载网络</a>
+<a href="sub.html">>人类移动性</a>
 </div>
 
 <div id="content">
 <h3>>研究经历</h3>
 <p>>我现在的主要研究方向是Human mobility&modeling，借助大数据来开展相关的研究。第一次的研究经历是关于城市计算以及车载网络，我的任务，第一是信息矫正及补充，第二是从交通数据中提取堵车信息。这次研究的目的是希望从南京出租车的移动信息中首先了解南京交通的基本情况，出租车的移动情况。第二次的研究经历是关于Human Mobility的宏观及微观研究，我的任务是第一，基于上海市蜂窝大数据，对移动性研究的高引论文及开拓论文“Understanding human individual mobility patterns"进行相关验证。第二，对蜂窝网络大数据下的人类移动提出相关的模型，将模型运用到数据的挖掘中。</p>
 <h3>>背景</h3>
-<p>>移动大数据越来越多的被应用在交通规划，城市规划当中。该数据的特点体现在产生途经广，分析方法多样，研究价值高。</p>
-<img src="P1.png" width= 100% alt="Picture Failed">
+<p>>移动大数据越来越多的被应用在交通规划，城市规划当中。该数据的特点体现在产生途经广，分析方法多样，研究价值高。可产生于社交网络，无线，蜂窝，车载系统等。针对不同途径获取的数据有不同的处理方法，对于获取途径上，如基于无线网络获取的GPS坐标不是准确的，因此研究移动性的时候需要将误差考虑在内。而基于蜂窝网络获取的GPS坐标通常是基站的坐标，因此移动的数据不是人类移动的真实体现，需要对此进行调整。基于社交网络的数据来说，数据精度高，但数据量相对于其他方法较少。对于不同的测量对象上，车辆因为在移动中会因为网络质量，GPS数据精度下降。而对于人而言，低速的移动使数据的精准度相对较高。</p>
+<img src="P1.png" width= 40% alt="Picture Failed">
 
 </div>
 <div id="footer">All right reserved1</div>
