--- a/sub.html
+++ b/sub.html
@@ -6,7 +6,7 @@
 <div id="header">
 <h1>工作日志 By Nicolas Kang</h1>
 </div>
-<div id="content">
+<div id="content1">
 <h3>人类移动性</h3>
 <h4>简要介绍</h4>
 <p>移动性研究主要为探究移动过程中的规律。主要研究方法是通过移动数据采集，数据处理，归纳。最早的移动研究可追溯到从random walk模型的提出，之后有一些关于鸟类迁徙的移动模型。而后有提出levy flight的移动模型。基于该模型的建立，MIT的MC Gonzalez提出了移动距离指数分布的规律，这是human mobility的开创性研究结论。后续有提出移动间隔指数分布，常驻地点呈1/x分布等等。随着研究方法的不断改进以及实验数据的不断完备，移动规律逐渐被挖掘出来。之后该领域大体方向是从宏观的统计研究转向微观的轨迹研究，从单纯的分析转而与交通，城市规划，公共卫生，反恐安全，医疗等领域结合。</p>
