--- a/sub.html
+++ b/sub.html
@@ -11,11 +11,19 @@
 <h4>简要介绍</h4>
 <p>>移动性研究主要为探究移动过程中的规律。主要研究方法是通过移动数据采集，数据处理，归纳。最早的移动研究可追溯到从random walk模型的提出，之后有一些关于鸟类迁徙的移动模型。而后有提出levy flight的移动模型。基于该模型的建立，MIT的MC Gonzalez提出了移动距离指数分布的规律，这是human mobility的开创性研究结论。后续有提出移动间隔指数分布，常驻地点呈1/x分布等等。随着研究方法的不断改进以及实验数据的不断完备，移动规律逐渐被挖掘出来。之后该领域大体方向是从宏观的统计研究转向微观的轨迹研究，从单纯的分析转而与交通，城市规划，公共卫生，反恐安全，医疗等领域结合。</p>
 <img src="P4.png" width=100% alt="Picture Failed">
-<h4>数据分析</h4>
-<p>>我们用于分析的数据基于蜂窝网络，每个手机号对应一个用户，可以知道用户的连接开始时间，结束时间，连接基站号码等相关信息。出于隐私保护的原因，手机号抹去后两位。连接基站号码可对应到基站的gps数据。由此可见，尽管移动数据齐全，但是抹去手机号使得几个用户的数据混叠在一起，因此首先理应先进行用户的分离，但是出于研究的目的，我们还是将混叠的用户当作一个用户，探究一下混叠现象带来的差异。</p>
+<h4>工作介绍</h4>
+<p>>我的工作是根据已有的数据，首先进行论文的验证，该论文为"Understanding human individual mobility patterns", 该论文的成果是Human Mobility领域的核心基础之一，他提出了移动距离指数分布，Rg回转半径的概念还有个人位置的概率密度函数。</p>
 <img src="P5.png" width=100% alt="Picture Failed">
+<h4>数据介绍</h4>
+<p>>该数据由众多记录组成，记录包括：手机号码，连接起始时间，结束时间，连接基站号码等。通过基站的号码，我们可以知道基站的gps坐标。出于隐私保护的原因，手机号抹去后两位。若按抹去后的手机号进行归类，可分成大概150，000份数据。</p>
+<h4>数据分析</h4>
+<p>>我们的数据基于蜂窝网络，可近似将基站gps等同于人的位置。因此我们在这里可以将人的移动等同于人在移动时间内在不同基站的跳动。尽管移动数据齐全，但是抹去手机号使得几个用户的数据混叠在一起，不能直接进行计算。因此首先理应先进行用户的分离，分离原则如下：1.起始时间和截止时间不能重叠 2.记录与记录之间的移动速度要合理</p>
 <h4>>数据处理与结论</h4>
-<p>></p>
+<div id="photo">
+<img src="P6.png" width= 100% alt="Picture Failed">
+<img src="P7.png" width= 100% alt="Picture Failed">
+<img src="P8.png" width= 100% alt="Picture Failed">
+</div>
 
 <p>>根据时间间隔Δt，将所需要的时间点取出，再根据现有的点来计算所有需要的GPS坐标，之后将GPS坐标根据地图来纠正到路上。</p>
 </hr>
