--- a/sub.html
+++ b/sub.html
@@ -18,20 +18,12 @@
 <p>>该数据由众多记录组成，记录包括：手机号码，连接起始时间，结束时间，连接基站号码等。通过基站的号码，我们可以知道基站的gps坐标。出于隐私保护的原因，手机号抹去后两位。若按抹去后的手机号进行归类，可分成大概150，000份数据。</p>
 <h4>数据分析</h4>
 <p>>我们的数据基于蜂窝网络，可近似将基站gps等同于人的位置。因此我们在这里可以将人的移动等同于人在移动时间内在不同基站的跳动。尽管移动数据齐全，但是抹去手机号使得几个用户的数据混叠在一起，不能直接进行计算。因此首先理应先进行用户的分离，分离原则如下：1.起始时间和截止时间不能重叠 2.记录与记录之间的移动速度要合理</p>
-<h4>>数据处理与结论</h4>
-<div id="photo">
+<p>>根据论文，我画出了相同的图片，可以看出之间的异同。</p>
 <img src="P6.png" width= 100% alt="Picture Failed">
 <img src="P7.png" width= 100% alt="Picture Failed">
 <img src="P8.png" width= 100% alt="Picture Failed">
-</div>
-
-<p>>根据时间间隔Δt，将所需要的时间点取出，再根据现有的点来计算所有需要的GPS坐标，之后将GPS坐标根据地图来纠正到路上。</p>
-</hr>
-<p>>如何提取堵车信息的？</p>
-<p>>堵车的条件是：1.对于个体而言，车辆会低速缓慢地移动。 2.对于群体而言，车辆会大量聚集在一个地方。因此提取的步骤分为了个人分析及群体分析。需要注意的是，两个步骤缺一不可，低速行驶是必要的条件，但不能充分的说明该车处于堵车的状态。</p>
-<p>>方法：1.提取每个车辆低速行驶的时间和地点。2.将所有数据进行归纳，找出大量车辆聚集的时间和地点。</p>
-
-
+<h4>>数据结论与分析</h4>
+<p>></p>
 </div>
 <div id="footer">All right reserved1</div>
 </div>
