--- a/sub.html
+++ b/sub.html
@@ -23,7 +23,10 @@
 <img src="P7.png" width= 100% alt="Picture Failed">
 <img src="P8.png" width= 100% alt="Picture Failed">
 <h4>>数据结论与分析</h4>
-<p>></p>
+<p>>我们主要关注结论之间的差异：1.与论文结论相比，移动距离在10km到20km的频率较高 2.回转半径在20km的频率较高，反而在0-15km的频率较低。 3.人的移动轨迹失去了周期性。 4.个人位置的归一化频率密度图并不如论文中的相近。</p>
+<p>>我分析的主要原因是：1.数据之间的差异性：论文中所用的数据来自欧洲电话局的6个月的电话数据，而我们的数据来自上海电信的3G数据，电话数据很有可能可以得到精度更高的gps数据，而3g数据只能把gps近似为基站的gps数据。另外研究对象本身也有差异，比如说生活习惯，规律，出行选择等等。2.用户分离的方法：时间不重叠和移动速度合理是单个用户移动轨迹的必要条件，但不是充分条件，还有一些移动的性质和规律可能没有被挖掘。</p>
+<p>>需要解决的问题：需要找出更多的移动性质和规律。换言之：我们要提出一个符合人类移动规律的模型。
+<img src="P9.png" width= 100% alt="Picture Failed">
 </div>
 <div id="footer">All right reserved1</div>
 </div>
