--- a/sub.html
+++ b/sub.html
@@ -15,7 +15,7 @@
 <p>>我的工作是根据已有的数据，首先进行论文的验证，该论文为"Understanding human individual mobility patterns", 该论文的成果是Human Mobility领域的核心基础之一，他提出了移动距离指数分布，Rg回转半径的概念还有个人位置的概率密度函数。</p>
 <img src="P5.png" width=100% alt="Picture Failed">
 <h4>数据介绍</h4>
-<p>>该数据由众多记录组成，记录包括：手机号码，连接起始时间，结束时间，连接基站号码等。通过基站的号码，我们可以知道基站的gps坐标。出于隐私保护的原因，手机号抹去后两位。若按抹去后的手机号进行归类，可分成大概150，000份数据。</p>
+<p>>该数据由众多记录组成，记录包括：手机号码，连接起始时间，结束时间，连接基站号码等。通过基站的号码，我们可以知道基站的gps坐标。出于隐私保护的原因，手机号抹去后两位。若按抹去后的手机号进行归类，可分成大概150，000份数据。记录时间为1个月。</p>
 <h4>数据分析</h4>
 <p>>我们的数据基于蜂窝网络，可近似将基站gps等同于人的位置。因此我们在这里可以将人的移动等同于人在移动时间内在不同基站的跳动。尽管移动数据齐全，但是抹去手机号使得几个用户的数据混叠在一起，不能直接进行计算。因此首先理应先进行用户的分离，分离原则如下：1.起始时间和截止时间不能重叠 2.记录与记录之间的移动速度要合理</p>
 <p>>根据论文，我画出了相同的图片，可以看出之间的异同。</p>
@@ -25,8 +25,15 @@
 <h4>>数据结论与分析</h4>
 <p>>我们主要关注结论之间的差异：1.与论文结论相比，移动距离在10km到20km的频率较高 2.回转半径在20km的频率较高，反而在0-15km的频率较低。 3.人的移动轨迹失去了周期性。 4.个人位置的归一化频率密度图并不如论文中的相近。</p>
 <p>>我分析的主要原因是：1.数据之间的差异性：论文中所用的数据来自欧洲电话局的6个月的电话数据，而我们的数据来自上海电信的3G数据，电话数据很有可能可以得到精度更高的gps数据，而3g数据只能把gps近似为基站的gps数据。另外研究对象本身也有差异，比如说生活习惯，规律，出行选择等等。2.用户分离的方法：时间不重叠和移动速度合理是单个用户移动轨迹的必要条件，但不是充分条件，还有一些移动的性质和规律可能没有被挖掘。</p>
-<p>>需要解决的问题：需要找出更多的移动性质和规律。换言之：我们要提出一个符合人类移动规律的模型。
+<p>>需要解决的问题：需要找出更多的移动性质和规律。换言之：我们要更进一步挖掘移动的规律。</p>
 <img src="P9.png" width= 100% alt="Picture Failed">
+<h4>>关于移动规律的设想和实施方法</h4>
+<p>>关于移动的通用规律，我提出了三点设想：1.少量的地点包含了大部分记录 2.路径按一定周期重复，周期为1天。并且经常带有往返。3.人经常选择最短路径，也可以理解为移动路径符合一定的拓扑关系。</p>
+<p>>针对第一点和第二点，分别针对两种情况：记录点很多，混合用户多的文件，记录点少，混合用户少的文件。对于第三点，结合速度合理性判断，可用于相邻记录之间的验证。
+<p>>1. 针对记录点少，混合用户少的文件。可根据之前论文的结论，可以得出：大部分人有3个高频地点，其记录量占据了总量70%以上。因此如果我们主要分析高频地点，将低频地点按时间顺序及移动合理性插值，既可以大致得出个人轨迹。其中高频地点之间的轨迹是高频轨迹，也是个人大致的移动轨迹。这一点也符合实际，例如人在工作地点，家，娱乐场所之间的往返，而路途中的地点属于低频地点。这个方法优点在于对于少量用户混叠，可较好的分离，而若对于大量用户混叠则效果不佳。原因在于少量用户可明显区分出高频和低频的地点，而且几个用户之间的重合度往往不高。而大量用户之间高频和低频地点重合度很高，例如一个用户的低频地点很有可能是其他用户的高频地点。很难提取高频地点。</p>
+<img src="P10.png" width= 100% alt="Picture Failed">
+<p>>2. 针对记录点多，混合用户多的文件。可根据第二点设想来判断。一份文件包含31天的数据，将31天的数据分开来，根据一个比较算法来寻找有相同的时间和地点的记录。这个方法充分地利用了人的习惯导致的行为周期性。但是这个周期性并不是绝对的，一个人的行为完全有可能没有任何周期。比如说一趟远途旅行，偶然的一次聚会等等。这个方法的优点在于：1.用户总量多，记录量大的时候，将数据分为31天减小了一次分析的数据量，从而减小分析的难度。2. 对于用户总量小，记录量少的时候，将数据分为31天可更有效地找出其中的规律。3. 该方法符合人基本的行为规律，一般来讲，人的工作，娱乐，休息，饮食都伴随着习惯而运行。这个方法的缺点在于：1. 不能解决特殊的用户，这个情况少见，但是这个用户包含在我们的研究之内。 2.不能解决记录量有大量缺失的用户，例如只有一天记录的用户，这个情况属于普遍现象。3. 具有相同习惯的用户很难被区分，不过这个情况很少见。</p>
+
 </div>
 <div id="footer">All right reserved1</div>
 </div>
