--- a/sub.html
+++ b/sub.html
@@ -33,6 +33,8 @@
 <p>>1. 针对记录点少，混合用户少的文件。可根据之前论文的结论，可以得出：大部分人有3个高频地点，其记录量占据了总量70%以上。因此如果我们主要分析高频地点，将低频地点按时间顺序及移动合理性插值，既可以大致得出个人轨迹。其中高频地点之间的轨迹是高频轨迹，也是个人大致的移动轨迹。这一点也符合实际，例如人在工作地点，家，娱乐场所之间的往返，而路途中的地点属于低频地点。这个方法优点在于对于少量用户混叠，可较好的分离，而若对于大量用户混叠则效果不佳。原因在于少量用户可明显区分出高频和低频的地点，而且几个用户之间的重合度往往不高。而大量用户之间高频和低频地点重合度很高，例如一个用户的低频地点很有可能是其他用户的高频地点。很难提取高频地点。</p>
 <img src="P10.png" width= 100% alt="Picture Failed">
 <p>>2. 针对记录点多，混合用户多的文件。可根据第二点设想来判断。一份文件包含31天的数据，将31天的数据分开来，根据一个比较算法来寻找有相同的时间和地点的记录。这个方法充分地利用了人的习惯导致的行为周期性。但是这个周期性并不是绝对的，一个人的行为完全有可能没有任何周期。比如说一趟远途旅行，偶然的一次聚会等等。这个方法的优点在于：1.用户总量多，记录量大的时候，将数据分为31天减小了一次分析的数据量，从而减小分析的难度。2. 对于用户总量小，记录量少的时候，将数据分为31天可更有效地找出其中的规律。3. 该方法符合人基本的行为规律，一般来讲，人的工作，娱乐，休息，饮食都伴随着习惯而运行。这个方法的缺点在于：1. 不能解决特殊的用户，这个情况少见，但是这个用户包含在我们的研究之内。 2.不能解决记录量有大量缺失的用户，例如只有一天记录的用户，这个情况属于普遍现象。3. 具有相同习惯的用户很难被区分，不过这个情况很少见。</p>
+<p>>实施这个方法，主要的工作是统计，而不是将所有的记录进行比较。统计的工作是将一天时间按30分钟分成一份，总共有24*2份。同时基站的数量有5000出头。接下来遍历所有记录，根据时间，基站号码进行统计。最后分析统计结果，在一定时间范围内，某些基站号码的记录数相对较高，而有些基站号码则有少量，甚至没有记录数。</p>
+<img src="P11.png" width= 100% alt="Picture Failed">
 
 </div>
 <div id="footer">All right reserved1</div>
