--- a/sub.html
+++ b/sub.html
@@ -35,13 +35,19 @@
 <p>>2. 针对记录点多，混合用户多的文件。可根据第二点设想来判断。一份文件包含31天的数据，将31天的数据分开来，根据一个比较算法来寻找有相同的时间和地点的记录。这个方法充分地利用了人的习惯导致的行为周期性。但是这个周期性并不是绝对的，一个人的行为完全有可能没有任何周期。比如说一趟远途旅行，偶然的一次聚会等等。这个方法的优点在于：1.用户总量多，记录量大的时候，将数据分为31天减小了一次分析的数据量，从而减小分析的难度。2. 对于用户总量小，记录量少的时候，将数据分为31天可更有效地找出其中的规律。3. 该方法符合人基本的行为规律，一般来讲，人的工作，娱乐，休息，饮食都伴随着习惯而运行。这个方法的缺点在于：1. 不能解决特殊的用户，这个情况少见，但是这个用户包含在我们的研究之内。 2.不能解决记录量有大量缺失的用户，例如只有一天记录的用户，这个情况属于普遍现象。3. 具有相同习惯的用户很难被区分，不过这个情况很少见。</p>
 <p>>实施这个方法，主要的工作是统计，而不是将所有的记录进行比较。统计的工作是将一天时间按30分钟分成一份，总共有24*2份。同时基站的数量有5000出头。接下来遍历所有记录，根据时间，基站号码进行统计。最后分析统计结果，在一定时间范围内，某些基站号码的记录数相对较高，而有些基站号码则有少量，甚至没有记录数。</p>
 <img src="P11.png" width= 100% alt="Picture Failed">
+<p>>我的设想来源一个经历：我认为在150，000份混叠用户中，可能存在一些单个用户的情况，若符合这种情况，起始时间和结束时间必定不能重合。所以第一步我将所有时间不重合的记录提取出来。共10，000余份。</p>
+<p>>接下来我便将记录输入至MATLAB，结合数据可视化来查看他们的轨迹。我总结了几种不同的轨迹。以下是其中的两种，可以看出，一种轨迹显得很有秩序，而另一种轨迹杂乱无章，明显形成了几个交集点。其内在的原因是用户有一到两个主要的区域，几个用户之间的混叠则造成了用户之间主要区域的跨越。</p>
+<img src="P14.png" width= 100% alt="Picture Failed">
 <h4>>数据的可视化</h4>
 <p>>对于移动大数据的研究，可视化可谓及其关键：1.很好地从复杂的数据中展现出价值 2.利于大数据的后续应用</p>
 <p>>针对我们的蜂窝移动数据，也有一套可视化的工具———— Matlab中的voronioi图</p>
 <p>>voronioi图中，点与点之间的中垂线围成了多边形，从而形成了细胞网络。在分析基站的影响区域中，由于基站影响范围不能精确确定，但是基站的范围也不能简单地用圆形辐射所代替。所以根据基站位置模拟出的基站影响范围是完全可行的。</p>
 <img src="P12.png" width= 100% alt="Picture Failed">
 <p>>我们分析的方法很多样：1.将记录输入图内，以动画形式进行判断 2.通过此图来验证分析方法的可行性 3.用此图来分析结果</p>
+<p>>以下是几种相关应用，第一个是根据动画来判断可能的路径。第二个是判断基站之间可能的关系。</p>
 <img src="P13.png" width= 100% alt="Picture Failed">
+<h4>>方法的验证，相关实验</h4>
+<p>上面的介绍是我们的阶段工作————提出问题，提出解决方案，初步验证方法。接下来我们的工作是验证方法，验证解决方案。如果效果理想，那么将推广。</p>
 </div>
 <div id="footer">All right reserved1</div>
 </div>
