--- a/sub.html
+++ b/sub.html
@@ -36,8 +36,11 @@
 <p>>实施这个方法，主要的工作是统计，而不是将所有的记录进行比较。统计的工作是将一天时间按30分钟分成一份，总共有24*2份。同时基站的数量有5000出头。接下来遍历所有记录，根据时间，基站号码进行统计。最后分析统计结果，在一定时间范围内，某些基站号码的记录数相对较高，而有些基站号码则有少量，甚至没有记录数。</p>
 <img src="P11.png" width= 100% alt="Picture Failed">
 <p>>我的设想来源一个经历：我认为在150，000份混叠用户中，可能存在一些单个用户的情况，若符合这种情况，起始时间和结束时间必定不能重合。所以第一步我将所有时间不重合的记录提取出来。共10，000余份。</p>
-<p>>接下来我便将记录输入至MATLAB，结合数据可视化来查看他们的轨迹。我总结了几种不同的轨迹。以下是其中的两种，可以看出，一种轨迹显得很有秩序，而另一种轨迹杂乱无章，明显形成了几个交集点。其内在的原因是用户有一到两个主要的区域，几个用户之间的混叠则造成了用户之间主要区域的跨越。</p>
+<p>>接下来我便将记录输入至MATLAB，结合数据可视化来查看他们的轨迹。我总结了几种不同的轨迹。以下是主要的两种，可以看出，一种轨迹显得很有秩序，而另一种轨迹杂乱无章，明显形成了几个交集点。其内在的原因是用户有一到两个主要的区域，几个用户之间的混叠则造成了用户之间主要区域的跨越。因此形成了我第一个设想。</p>
 <img src="P14.png" width= 100% alt="Picture Failed">
+<p>>从分析的数据中，也可以看出，随着记录量的增加，多重用户的增长量很大，而单个用户的增长速度缓慢</p>
+<img src="P15.png" width= 100% alt="Picture Failed">
+<p>>而对于第二点，第三点设想，则是通过我自己对人类这个特定群体的归纳。周期性体现在人的周期运作中，例如一般情况下，人都在经历这样的循环：休息—-工作--娱乐。包括我们每日的作息时间都是按照习惯和规矩的。比如几点上班决定着我们清早的出行，下班和晚饭时间决定着我们晚上的出行等等。而且，我们出行一般会选择最省时间，最短路程的方式。这也是人贪婪的一种表现。</p>
 <h4>>数据的可视化</h4>
 <p>>对于移动大数据的研究，可视化可谓及其关键：1.很好地从复杂的数据中展现出价值 2.利于大数据的后续应用</p>
 <p>>针对我们的蜂窝移动数据，也有一套可视化的工具———— Matlab中的voronioi图</p>
