--- a/sub1.html
+++ b/sub1.html
@@ -18,9 +18,9 @@
 </hr>
 <p>>如何提取堵车信息的？</p>
 <p>>堵车的条件是：1.对于个体而言，车辆会低速缓慢地移动。 2.对于群体而言，车辆会大量聚集在一个地方。因此提取的步骤分为了个人分析及群体分析。需要注意的是，两个步骤缺一不可，低速行驶是必要的条件，但不能充分的说明该车处于堵车的状态。</p>
-<p>>方法：1.提取每个车辆低速行驶的时间和地点。2.将所有数据进行归纳，找出大量车辆聚集的时间和地点。</p>
-
-
+<p>>方法：1.提取每个车辆低速行驶的时间和地点。2.将所有数据进行归纳，找出大量车辆聚集的时间和地点。以下是相关的算法。</p>
+<img src="P16.png" width= 100% alt="Picture Failed">
+<img src="P17.png" width= 100% alt="Picture Failed">
 </div>
 <div id="footer">All right reserved1</div>
 </div>
