--- a/sub1.html
+++ b/sub1.html
@@ -7,6 +7,7 @@
 <h1>工作日志 By Nicolas Kang</h1>
 </div>
 <div id="content1">
+<p>><a href="index.html">返回</a></p>
 <h3>城市计算以及车载网络</h3>
 <p>>如何进行信息矫正的？</p>
 <p>>首先针对信息矫正，具体来说是将GPS的数据矫正到道路上。车载网络的GPS数据不一定是完全正确无误的，GPS完全有可能不在道路上。但对于车辆来说，GPS坐标是一定要在道路上的。为了确保数据的一致性和结论的力度，将数据进行矫正是完全有必要的。关于信息的补充，具体目的是为了研究的方便，我们需要一个统一的时间轴来进行研究。因此我的任务是根据已有点进行统一的时间点补充。以下是示意图</p>
