--- a/sub.html
+++ b/sub.html
@@ -52,7 +52,7 @@
 <img src="P13.png" width= 100% alt="Picture Failed">
 
 </div>
-<div id="footer">All right reserved1</div>
+<div id="footer">All Right Reserved</div>
 </div>
 </body>
 </html>
