--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <img src="P1.png" width= 100% alt="Picture Failed">
 
 </div>
-<div id="footer">All right reserved1</div>
+<div id="footer">All Right Reserved</div>
 </div>
 </body>
 </html>
