--- a/sub1.html
+++ b/sub1.html
@@ -23,7 +23,7 @@
 <img src="P16.png" width= 100% alt="Picture Failed">
 <img src="P17.png" width= 100% alt="Picture Failed">
 </div>
-<div id="footer">All right reserved1</div>
+<div id="footer">All Right Reserved</div>
 </div>
 </body>
 </html>
